# trinity

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
configs/: base.yaml  data_splits.yaml  dqn_hyperparams.yaml  dqn_sweep.yaml  executor_sweep.yaml  guardian.yaml  inaction_sweep.yaml  multi_ticker_sweep.yaml  vol_scaled_sweep.yaml
docs/: dqn-implementation-plan.md  experiment-log.md  phase-0-setup.md  phase-1-data.md  phase-2-executor.md  phase-3-analyst.md  phase-4-cgate.md  phase-5-guardian.md  phase-6-integration.md  phase-7-adversarial.md  phase-8-evaluation.md  workshop-paper-plan.md
notebooks/: 01_data_exploration.py
scripts/: README.md  bootstrap_analysis.py  build_perseed_appendix.py  calibrate_and_run.py  cgate_integration.py  demo_cgate.py  diagnose_policy.py  download_data.py  download_headlines.py  download_phrasebank.py  generate_figures.py  run_adversarial.py  run_baselines.py  run_multiseed.py  run_multiseed_dqn.py  run_precompute.py  sweep_cgate.py  validate_analyst.py  verify_ollama.py  verify_sb3.py  verify_wandb.py
slurm/: .env.template  README.md  common.sh  launch-dqn-sweep.sh  launch-inaction-sweep.sh  launch-multi-ticker-sweep.sh  launch-ppo-sweep.sh  launch-vol-scaled-sweep.sh  setup-env.sh  slurm-multiseed-dqn.sh  slurm-multiseed-ppo.sh  slurm-setup.sh  slurm-sweep-dqn.sh  slurm-sweep-ppo.sh  validate-gpu.sh
tests/: test_analyst.py  test_analyst_conversion.py  test_calibrate.py  test_cgate.py  test_cgate_integration.py  test_data_pipeline.py  test_env.py  test_evaluate.py  test_features.py  test_guardian.py  (+4 more)
(+262 files in other folders)
